# crud_python_docker

./: README.md  exemplo_01.py  meubanco.db  pyproject.toml
